--- a/src/main.css
+++ b/src/main.css
@@ -24,3 +24,16 @@ img {
   margin: 20px 0;
   max-width: 200px;
 }
+
+
+.wrapper {
+  display: grid;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  margin : 10%
+}
+
+.case{
+  border: 1px solid
+}
