--- a/src/main.css
+++ b/src/main.css
@@ -41,11 +41,25 @@ img {
   font-weight: bold;
 }
 
+.headers{
+
+  display: grid;
+  grid-gap: 0.2%;
+  grid-auto-rows: minmax(8vh, auto);
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  margin-left: 10%;
+  margin-right: 10%;
+  /* position: fixed; */
+  /* z-index: 10; */
+}
 
 .wrapper {
   display: grid;
   grid-gap: 0.2%;
   grid-auto-rows: minmax(8vh, auto);
+  grid-template-columns: repeat(10, 1fr);
   margin-top: 2vh;
   margin-bottom: 2vh;
   margin-left: 10%;
